- Implement wxLocale::GetInfo() using CFLocale

wxMSW:

- Fixed infinite loop in wxThread::Wait() in console applications.
- Return the restored window size from GetSize() when window is minimized.
- wxCheckListBox now looks more native, especially under XP (Marcin Malich).
- Allow tooltips longer than 64 (up to 128) characters in wxTaskBarIcon

wxX11:

- Added mouse wheel support (David Hart).
- Make Enter key activate the default button (David Hart).


2.8.6
-----

All:

- Fixed another bug in wxFileConfig when deleting entries (Axel Gembe)
- Added Portuguese translation (Antonio Cardoso Martins)


2.8.5
-----

All (GUI):

- Added colour normalization to PNM image handler (Ray Johnston)
- Fixed selecting part of word from right to left in wxHTML (Michael Hieke)
- Selecting text in wxHTML with character precision was made easier, it's
  enough to select half of a character (Michael Hieke)
- Significantly improved startup times of XRC-based applications using
  embedded resources on Unix (requires resources recompilation)
- Fixed freeing of "static" alpha data in wxImage (Axel Gembe)
- Don't invalidate the font in SetNativeFontInfo[Desc]() if the string is
  invalid, to conform to the documented behaviour (Langhammer)
- Fixed wxXPMHandler::SaveFile for images with more than 92 colors.

wxMSW:

- Correct problem with page setup dialog when using landscape mode
- Added msw.font.no-proof-quality system option, see manual for description
- Fix appearance of notebook with non-top tabs under Windows Vista
- Fixed bug with symbol resolving in wxStackWalker (Axel Gembe)
- Fixed showing busy cursor for disabled windows and during wxExecute()
- Set the string of wxEVT_COMMAND_CHECKLISTBOX_TOGGLED events (Luca Cappa)
- Fix problems with timers on SMP machines in wxAnimationCtrl (Gennady)

wxGTK:

- Setting foreground colour of single line wxTextCtrl now works
- More work on setting defaults in GNOME print dialogs.
- Also made landscape printing work as per wxMSW.